adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas explicabo rerum itaque consectetur autem totam, cumque iure, doloremque placeat odio amet, est possimus aliquid inventore ullam tempore eveniet blanditiis! Quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis libero dolor quibusdam esse consequuntur accusamus dolorem animi rem ab dignissimos atque eius delectus tempora sunt nam aliquam, aut inventore? Doloremque!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo sit hic optio id facere placeat nam perspiciatis voluptatem, labore culpa minus dolore dolorum mollitia magni quo eaque! Minima, repellendus sapiente? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos vero praesentium a perferendis voluptate animi distinctio? Cupiditate ea inventore labore dolor maiores voluptatem, debitis rerum, quidem, temporibus veritatis fugiat accusantium.</p>
 </body>
 </html>
